Whitespace bug fix attempted

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
     font-size: 40px;
     color: #f5f5f5;
     margin-left: 20px;
-    padding: auto;
 }
 
 .navbar-brand:focus, .navbar-brand:hover {
@@ -48,10 +47,6 @@ button a.nav-link {
 }
 
 /* Hero Image */
-.container {
-    width: 100%;
-    height: 600px;
-}
 .hero-img.img-fluid {
     background-image: url('../images/pexels-dogs-water-21-crop.jpg');
     width: 100%;
@@ -118,6 +113,7 @@ a {
         width: 100%;
     }
     .hero-img.img-fluid {
+        width: 100%;
         height: 70vh; /*shows full image in landscape*/
     }
     #hero-outer {
